# elizaCLI

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md
examples/: plugin_example.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/commands/: mod.rs
src/commands/handlers/: mod.rs
src/data/: mod.rs
src/data/providers/: mod.rs
src/data/services/: mod.rs
src/plugins/: mod.rs
src/state/: agent_state.rs  client_state.rs  metrics.rs  mod.rs  plugin_state.rs  shared_state.rs
src/ui/: app.rs  events.rs  mod.rs
tests/: core_tests.rs  state_tests.rs
