[package]
name = "eliza-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI interface for the Eliza framework using Ratatui"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
thiserror = "1.0.56"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.14", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
