[package]
name = "eliza-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI interface for the Eliza framework using Ratatui"

[dependencies]
# UI and Terminal
ratatui = "0.25.0"
crossterm = "0.27.0"

# Async Runtime
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# Error Handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# Logging and Instrumentation
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-futures = "0.2.5"

# CLI Argument Parsing
clap = { version = "4.4.14", features = ["derive"] }

# Utilities
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
parking_lot = "0.12.1"  

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
tracing-test = "0.2.4"  